# Data-Cleaner-Report-Generator

./: .gitignore  README.md  pytest.ini
data_cleaner/: conftest.py  main.py  pyproject.toml  requirements.txt  runApp.ps1  server.js
data_cleaner/src/backend/: app.py  main.py
data_cleaner/src/backend/endpoints/delete_endpoint/: __init__.py  file_remover.py
data_cleaner/src/backend/endpoints/get_endpoints/: live_update.py
data_cleaner/src/backend/endpoints/post_endpoint/: cleaner_route.py
data_cleaner/src/backend/schema/: schema.py
data_cleaner/src/backend/services/: cleaner.py
data_cleaner/src/frontend/: connector.js  index.html  style.css
data_cleaner/tests/test_backend/: conftest.py  test_delete_endpoints.py  test_get_endpoints.py  test_post_endpoints.py
data_cleaner/tests/test_frontend/: conftest.py  test_frontend_workflow.py
