[project]
name = "data-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-multipart>=0.0.29",
    "uvicorn>=0.47.0",
]
